# qt_games

Arkanoid/: CMakeLists.txt  game.cpp  gamescene.cpp  gamescene.h  level.cpp  level.h  resource.qrc  view.cpp  view.h
Bejeweled/: CMakeLists.txt  game.cpp  game.h  gamescene.cpp  gamescene.h  main.cpp  resource.qrc  view.cpp  view.h
JanJump/: CMakeLists.txt  game.cpp  game.h  gamescene.cpp  gamescene.h  resource.qrc  view.cpp  view.h
Tetris/: CMakeLists.txt  game.cpp  game.h  gamescene.cpp  gamescene.h  menuscene.cpp  menuscene.h  resource.qrc  settingsscene.cpp  settingsscene.h  view.cpp  view.h
